fix: post card not showing description

--- a/styles/components.module.css
+++ b/styles/components.module.css
@@ -39,7 +39,7 @@
 }
 
 .postCard:hover {
-  background-color: aliceblue;
+  background-color: grey;
 }
 
 @media screen and (max-width: 500px) {
